--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DISCORD_TOKEN=your-discord-bot-token
-WEBHOOK_URL=your-discord-webhook-url
-API_ENDPOINT=http://your-website.com/api/messages
+DISCORD_TOKEN=YOUR_DISCORD_BOT_TOKEN
+WEBHOOK_URL=YOUR_DISCORD_WEBHOOK_URL
+API_ENDPOINT=https://your-username.github.io/your-repository/messages.json
